# katas-in-sqlalchemy

./: .gitignore  README.md  pyproject.toml
src/sqla_kata/: cli.py  commands.py  db_engine.py  domain.py  logging.py  run.py  sample_data.py
src/sqla_kata/variations/: __init__.py  v1_sql.py  v2_core.py  v3_orm.py
src/sqla_kata/versions/: __init__.py  v1_sql.py
tests/: test_sqla_kata.py
